# backend

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
petabyte/: pyproject.toml
petabyte/petabyte/: __init__.py  authorization.py  connector.py  errors.py  forge.py  utils.py
petabyte/petabyte/models/: event.py
petabyte/petabyte/models/db/: __init__.py  channel.py  message.py  user.py
petabyte/petabyte/models/hadron/: __init__.py  user.py
petabyte/petabyte/models/poly/: __init__.py  user.py
polynode/: app.py  ids.py  json.py  launch.py  pyproject.toml  utils.py
polynode/models/: event.py
polynode/models/db/: channel.py  message.py  user.py
polynode/polynode/: __init__.py  app.py  ids.py  json.py  launch.py
polynode/polynode/routes/: __init__.py
polynode/polynode/routes/users/: __init__.py  create_user.py  fetch_me.py
scripts/: dev.bat  dev.sh  devcorn.bat  devcorn.sh  gunicorn.sh  prod.sh  sync_db.bat  sync_db.sh
warehouse/: __init__.py  launch.py
warehouse/db/: __init__.py  database.py  id_generation.py  messages.py  utils.py
warehouse/db/models/: __init__.py  etc.py  guilds.py  users.py
warehouse/lib/: __init__.py  errors.py
warehouse/lib/guilds/: __init__.py  basic.py  routes.py
warehouse/lib/payloads/: __init__.py  guilds.py  users.py
warehouse/lib/users/: __init__.py  authorization.py  basic.py  routes.py
warehouse/models/: __init__.py  base.py  guild.py  user.py
