[tool.poetry]
name = "derailed-backend"
version = "0.0.0"
description = ""
authors = ["VincentRPS <vincentbusiness55@gmail.com>"]
license = "LGPL-3.0"

[tool.isort]
profile = 'black'

[tool.black]
target-version = ['py310']
skip-string-normalization = true

[tool.pyright]
reportMissingTypeStubs = false
reportPrivateUsage = false

[tool.poetry.dependencies]
python = "~3.10"
polynode = {path = "polynode", develop = false}
petabyte = {path = "petabyte", develop = false}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
