[tool.poetry]
name = "polynode"
version = "0.0.0"
description = "Polynode is the backend api for derailed."
authors = ["VincentRPS"]

[tool.isort]
profile = 'black'

[tool.black]
target-version = ['py310']
skip-string-normalization = true

[tool.pyright]
reportMissingTypeStubs = false
reportPrivateUsage = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"
Flask-Pydantic = "^0.9.0"
gunicorn = {version = "^20.1.0", platform = "linux"}
orjson = "^3.7.3"
petabyte = {path = "../petabyte"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pyright = "^1.1.255"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
